--- a/src/com/foursquare/skins/shout/ShoutBoxSkin.mxml
+++ b/src/com/foursquare/skins/shout/ShoutBoxSkin.mxml
@@ -81,14 +81,31 @@ is defined by the DropDownListButtonSkin class.
 			</s:stroke>
 		</s:Line>
 		
-		<s:Rect left="0" right="0" top="0" bottom="0">
+		<!--<s:Rect left="0" right="0" top="0" bottom="0">
 			<s:fill>
 				<s:SolidColor color="0x94bccf" />
+			</s:fill>
+		</s:Rect>-->
+		<s:Rect top="0" bottom="0" left="0" right="0"
+				alpha="1">
+			<s:fill>
+				<s:LinearGradient rotation="90">
+					<s:GradientEntry color="0x457b9b"/>
+					<s:GradientEntry color="0x94bccf"/>
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		<s:Rect top="0" bottom="0" left="0" right="0"
+				alpha=".2">
+			<s:fill>
+				<s:BitmapFill fillMode="repeat"
+							  source="@Embed('assets/images/repeatingBG.png')"/>
 			</s:fill>
 		</s:Rect>
 		
 		<s:Button id="openButton" left="0" right="0" top="0" bottom="0"
-				  skinClass="com.foursquare.skins.shout.ShoutBarButtonSkin"/>  
+				  skinClass="com.foursquare.skins.shout.ShoutBarButtonSkin"/>
+		
 	</s:Group>
 	
 	
