--- a/src/com/foursquare/skins/header/NavigationSkin.mxml
+++ b/src/com/foursquare/skins/header/NavigationSkin.mxml
@@ -25,6 +25,7 @@
 	<s:DataGroup id="dataGroup" width="100%" height="100%">
 		<s:layout>
 			<s:ButtonBarHorizontalLayout gap="2"/>
+			<!--<s:VerticalLayout gap="10" />-->
 		</s:layout>
 	</s:DataGroup>
 	
