--- a/src/com/foursquare/skins/login/LoginViewSkin.mxml
+++ b/src/com/foursquare/skins/login/LoginViewSkin.mxml
@@ -1,27 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+<s:Skin height="100%" width="100%"
+		xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		xmlns:mx="library://ns.adobe.com/flex/mx">
+	<fx:Script>
+		<![CDATA[
+			import spark.utils.TextFlowUtil;
+		]]>
+	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:states>
-		<s:State name="normal" />
-		<s:State name="disabled" />
+		<s:State name="normal"/>
+		<s:State name="disabled"/>
 	</s:states>
-	
-	<s:Rect left="0" right="0" top="0" bottom="0">
+
+
+	<!--<s:BitmapImage source="@Embed('assets/images/bg-login.png')" verticalCenter="0" horizontalCenter="0" />-->
+
+	<s:Rect top="0" bottom="0" left="0" right="0"
+			alpha="1">
 		<s:fill>
-			<s:SolidColor color="0x000000" />
+			<s:LinearGradient rotation="90">
+				<s:GradientEntry color="0x94bccf"/>
+				<s:GradientEntry color="0x457b9b"/>
+			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-	
-	<s:BitmapImage source="@Embed('assets/images/bg-login.png')" verticalCenter="0" horizontalCenter="0" />
-	
-	<s:Group id="contentGroup" left="0" right="0" top="0" bottom="0" minWidth="0" minHeight="0">
+	<s:Rect top="0" bottom="0" left="0" right="0"
+			alpha=".2">
+		<s:fill>
+			<s:BitmapFill fillMode="repeat"
+						  source="@Embed('assets/images/repeatingBG.png')"/>
+		</s:fill>
+	</s:Rect>
+
+	<s:VGroup gap="5"
+			  top="50" left="20">
+		<s:Label text="FOURSQUAIR" styleName="loginTitle"/>
+		<s:Label text="Foursquare for your desktop" styleName="loginTagline"/>
+	</s:VGroup>
+
+	<s:RichText textFlow="{TextFlowUtil.importFromString('an open source Air project&lt;br/&gt;by Seth, Phoebe, Naveen, and Lucas.')}"
+			styleName="loginFooter" textAlign="center"
+			 width="250" horizontalCenter="0" bottom="20"/>
+
+	<s:Group id="contentGroup"
+			 top="0" bottom="0" left="0" right="0"
+			 minWidth="0"
+			 minHeight="0">
 		<s:layout>
 			<s:BasicLayout/>
 		</s:layout>
 	</s:Group>
-	
+
 </s:Skin>
